--- a/package.json
+++ b/package.json
@@ -12,15 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "bson": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "mongoose": "^7.0.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20",
-    "react-ipfs-uploader": "^1.2.7",
-    "xrpl": "^2.7.0-beta.2"
+    "mongoose": "^7.0.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
